--- a/app/src/main/res/layout/activity_exchange.xml
+++ b/app/src/main/res/layout/activity_exchange.xml
@@ -6,10 +6,13 @@
     android:layout_height="match_parent"
     tools:context="co.com.currencyexchange.exchange.ExchangeActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <EditText
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:hint="Value"
+        android:layout_margin="16dp"
+        android:inputType="number"
+        android:id="@+id/mETValue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
