--- a/app/src/main/res/layout/activity_exchange.xml
+++ b/app/src/main/res/layout/activity_exchange.xml
@@ -3,19 +3,44 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:padding="16dp"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     tools:context="co.com.currencyexchange.exchange.ExchangeActivity">
 
-    <EditText
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/mTILValue"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Value"
-        android:layout_margin="16dp"
-        android:inputType="number"
-        android:id="@+id/mETValue"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:hint="@string/value_label"
+        android:textColorHint="#cccccc"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <EditText
+            android:id="@+id/mETValue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:fontFamily="@font/roboto_bold"
+            android:inputType="number"
+            android:textColor="@android:color/white"
+            android:textColorHint="#cccccc" />
+
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="0dp"
+        android:id="@+id/mRVExchanges"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mTILValue" />
+
 
 </android.support.constraint.ConstraintLayout>
